--- a/Temp001/package.json
+++ b/Temp001/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "@heroicons/react": "latest"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
